--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.jpg" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
-					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
+				<a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -68,7 +66,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/atlanta%20web%20designer%20mike.jpg" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
+				<img src="img/mike.jpg" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					I'm Mike.
 				</h1>
