--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="en">
 <head>
 	<meta http-equiv="Cache-Control" content="public">
 	<meta http-equiv="Cache-Control" content="max-age=3600">
@@ -15,7 +15,6 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js"></script>
