--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,8 @@
 <!doctype html>
-<html lang="Default">
+<html lang="en">
 <head>
+	<meta http-equiv="Cache-Control" content="public">
+	<meta http-equiv="Cache-Control" content="max-age=3600">
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -13,7 +15,6 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
