--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta http-equiv="Cache-Control" content="public">
 	<meta http-equiv="Cache-Control" content="max-age=3600">
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
     <meta name="description" content="I'm Mike and your should hire me to build your website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index, nofollow">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -15,10 +15,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js"></script>
-	<script src="./js/gmaps.js"></script>
+	<script defer src="./js/bootstrap.js"></script>
+	<script defer src="./js/blocs.js"></script>
+	<script defer src="./js/jquery.touchSwipe.js"></script>
+	<script defer src="./js/gmaps.js"></script>
 
     <title>.</title>
 
@@ -40,7 +40,7 @@
 				<a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+					<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -51,7 +51,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2</a>
+						<a href="page2.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -226,26 +226,24 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-
-					<div class="keywords" style="color:#364577;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
 
 				</div>
 					<div class="row">
@@ -257,34 +255,6 @@
 								<li><a href="myroof.com">myroof.com</a></li>
 								<li><a href="realestateseo.com">realestateseo.com</a></li>
 							</ul>		
-					</div>
-					<div class="col-sm-4">
-						Directories 1
-						<ul>
-							<li><a href="agencydirectory.com">agencydirectory.com</a></li>
-							<li><a href="seodirectory.com">seodirectory.com</a></li>
-							<li><a href="marketingdirectory.com">marketingdirectory.com</a></li>
-							<li><a href="123seo.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="wordpressdirectory.com">wordpressdirectory.com</a></li>
-							<li><a href="agencylistatl.com">agencylistatl.com</a></li>
-							<li><a href="bestagencyatl.com">bestagencyatl.com</a></li>
-							<li><a href="seolist.com">seolist.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Directories 2
-						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="yesseo.com">yesseo.com</a></li>
-							<li><a href="seojuicelink.com">seojuicelink.com</a></li>
-							<li><a href="bestlinks.com">bestlinks.com</a></li>
-							<li><a href="linkalot.com">linkalot.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuicedirectory.com">linkjuicedirectory.com</a></li>
-							<li><a href="rankongoogle.com">rankongoogle.com</a></li>
-							<li><a href="trustedseo.com">trustedseo.com</a></li>
-						</ul>
 					</div>
 				</div>
 			</div>
