Cosmetic/functional edits

--- a/page2.html
+++ b/page2.html
@@ -137,23 +137,34 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
+					</div>
+
+					<div class="row">
+					<div class="col-sm-4">
+						Partners
+							<ul>
+								<li><a href="car.com">car.com</a></li>
+								<li><a href="pizza.com">pizza.com</a></li>
+								<li><a href="myroof.com">myroof.com</a></li>
+								<li><a href="realestateseo.com">realestateseo.com</a></li>
+							</ul>		
 					</div>
 				</div>
 			</div>
