got most recent jquery to make navbar toggle work

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
+	<script
+	src="https://code.jquery.com/jquery-3.6.0.min.js"
+	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	crossorigin="anonymous"></script>	<script defer src="./js/bootstrap.js"></script>
 	<script defer src="./js/bootstrap.js"></script>
 	<script defer src="./js/blocs.js"></script>
-	<script defer src="./js/jquery.touchSwipe.js"></script>
 	<script defer src="./js/gmaps.js"></script>
 
     <title>.</title>
@@ -43,12 +46,11 @@
 					<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
+			
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Home</a>
-					</li>
-					<li>
 					</li>
 					<li>
 						<a href="page2.html">Contact</a>
