--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script defer src="./js/blocs.js"></script>
 	<script defer src="./js/gmaps.js"></script>
 
-    <title>Go Mike Designs - Web Designer</title>
+    <title>GoMike Designs - Web Designer</title>
 
     
 <!-- Analytics -->
@@ -68,9 +68,9 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/mike.jpg" class="center-block image-resize-mode" width="100" alt="Mike's profile icon" />
-				<h1 class="text-center hero-bloc-text tc-white ">
+				<p style="font-size: 3em;" class="text-center hero-bloc-text tc-white ">
 					I'm Mike.
-				</h1>
+				</p>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
@@ -85,7 +85,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p style="font-size: 2.5em;">I create websites and design graphics that help Atlanta companies become attractive and recognizable online.</p>
+				<h1>I create websites and design graphics that help Atlanta companies become attractive and recognizable online.</h1>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -155,8 +155,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-								<img alt="web agency, web design, logo design " src="img/title2.jpg" />
-
+				<h2 style="font-size: 2em;"> Websites I've designed and developed for Atlanta companies</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
