footer landmark (main and nav done in previous edits)

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				<h2 class="mg-md text-center tc-white">
 					I love Atlanta, my hometown, and want to see all Atlanta businesses succeed. I help by offering web design services that help local businesses stand out and attract new customers online.<br>
 				</h2>
-				<p class="text-center white">
+				<p class="text-center white" style="font-size: 1em;">
 					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href="page2.html">Contact me</a><br>
 				</p>
 			</div>
@@ -218,7 +218,7 @@
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
+<footer class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -261,7 +261,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </main>
