--- a/page2.html
+++ b/page2.html
@@ -110,13 +110,13 @@
 						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-						Send
+						Send message
 					</button>
 				</form>
 			</div>
 			<div class="col-sm-6">
 				<p>
-					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html">other page</a>.
+					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelance services? <br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html">other page</a>.
 				</p>
 			</div>
 		</div>
@@ -130,7 +130,7 @@
 
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
+<footer class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -173,7 +173,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </main>
