footer, alt text

--- a/page2.html
+++ b/page2.html
@@ -134,9 +134,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<h2 class="text-center white" style="font-size: 1.3em">
 					GoMike Designs - Web designer living and loving Atlanta.<br>
-				</p>
+				</h2>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
@@ -159,18 +159,17 @@
 						</div>
 					</div>
 
-					<div class="row">
-					<div class="col-sm-4">
-						Partners
+					<div class="col-sm-12 ">
+						<h2 class="white" style="font-size: 1.3em;">Partners</h2>
 							<ul>
-								<li><a href="car.com">car.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="myroof.com">myroof.com</a></li>
-								<li><a href="realestateseo.com">realestateseo.com</a></li>
+								<li><a href="car.com" style="text-decoration: none; color: rgba(255, 255, 255, .6)!important;">car.com</a></li>
+								<li><a href="pizza.com" style="text-decoration: none; color: rgba(255, 255, 255, .6)!important;">pizza.com</a></li>
+								<li><a href="myroof.com" style="text-decoration: none; color: rgba(255, 255, 255, .6)!important;">myroof.com</a></li>
+								<li><a href="realestateseo.com" style="text-decoration: none; color: rgba(255, 255, 255, .6)!important;">realestateseo.com</a></li>
 							</ul>		
 					</div>
 				</div>
-			</div>
+
 		</div>
 	</div>
 </footer>
