--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/dogsitters.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/dogsitters.jpg" class="img-responsive portfolio-thumb" alt="Dog posing for picture with its walker holding the leash in the background."/></a>
+				<a href="#" data-lightbox="img/dogsitters.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/dogsitters.jpg" class="img-responsive portfolio-thumb" style="width: 270px; height: 270px;" alt="Dog posing for picture with its walker holding the leash in the background."/></a>
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
@@ -166,7 +166,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/cupcakes.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/cupcakes.jpg" class="img-responsive portfolio-thumb" alt="Three and a half yellow cupcakes with seafoam green icing and colored sprinkles."/></a>
+				<a href="#" data-lightbox="img/cupcakes.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/cupcakes.jpg" class="img-responsive portfolio-thumb" style="width: 270px; height: 270px;" alt="Three and a half yellow cupcakes with seafoam green icing and colored sprinkles."/></a>
 				<h3 class="mg-md text-center">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
@@ -177,7 +177,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/techgear.jpg" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/techgear.jpg" class="img-responsive portfolio-thumb" alt="Top view od photo and computer equipment neatly arranged on a dark colored surface." /></a>
+				<a href="#" data-lightbox="img/techgear.jpg" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/techgear.jpg" class="img-responsive portfolio-thumb" style="width: 270px; height: 270px;" alt="Top view od photo and computer equipment neatly arranged on a dark colored surface." /></a>
 				<h3 class="mg-md text-center">
 					New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
 				</h3>
@@ -186,7 +186,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/legal.jpg" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/legal.jpg" class="img-responsive portfolio-thumb" alt="Young businessman sitting in a hellicopter"/></a>
+				<a href="#" data-lightbox="img/legal.jpg" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/legal.jpg" class="img-responsive portfolio-thumb" style="width: 270px; height: 270px;" alt="Young businessman sitting in a hellicopter"/></a>
 				<h3 class="mg-md text-center">
 					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
 				</h3>
