--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt="GoMike Designs logo" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt="GoMike Designs logo" height="40px" width="215px" /></a>
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -64,7 +64,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/mike.jpg" class="center-block image-resize-mode" width="100" alt="Mike's profile icon" />
+				<img src="img/mike.jpg" class="center-block image-resize-mode" width="100px" height:"103px" alt="Mike's profile icon" />
 				<p style="font-size: 3em;" class="text-center hero-bloc-text tc-white ">
 					I'm Mike.
 				</p>
