--- a/page2.html
+++ b/page2.html
@@ -37,7 +37,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt="GoMike Designs logo" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt="GoMike Designs logo" height="40px" width="215px" /></a>
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
