--- a/page2.html
+++ b/page2.html
@@ -158,12 +158,12 @@
 
 					<div class="col-sm-12 ">
 						<h2 class="white" style="font-size: 1.3em;">Partners</h2>
-							<ul>
-								<li><a href="car.com" style="text-decoration: none; color: rgba(255, 255, 255, .6)!important;">car.com</a></li>
-								<li><a href="pizza.com" style="text-decoration: none; color: rgba(255, 255, 255, .6)!important;">pizza.com</a></li>
-								<li><a href="myroof.com" style="text-decoration: none; color: rgba(255, 255, 255, .6)!important;">myroof.com</a></li>
-								<li><a href="realestateseo.com" style="text-decoration: none; color: rgba(255, 255, 255, .6)!important;">realestateseo.com</a></li>
-							</ul>		
+						<ul>
+							<li><a href="car.com" style="text-decoration: none; color: white!important;">car.com</a></li>
+							<li><a href="pizza.com" style="text-decoration: none; color: white!important;">pizza.com</a></li>
+							<li><a href="myroof.com" style="text-decoration: none; color: white!important;">myroof.com</a></li>
+							<li><a href="realestateseo.com" style="text-decoration: none; color: white!important;">realestateseo.com</a></li>
+						</ul>		
 					</div>
 				</div>
 
