--- a/page2.html
+++ b/page2.html
@@ -14,8 +14,8 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-    
-	<script defer src="./js/bootstrap.js"></script>
+	<script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>	<script defer src="./js/bootstrap.js"></script>
+    <script defer src="./js/bootstrap.js"></script>
 	<script defer src="./js/bootstrap.js"></script>
 	<script defer src="./js/blocs.js"></script>
 	<script defer src="./js/gmaps.js"></script>
