--- a/page2.html
+++ b/page2.html
@@ -64,10 +64,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center hero-bloc-text tc-white">
+				<h1 class="text-center hero-bloc-text tc-white">
 					Let&rsquo;s talk web design!
-				</p>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
+				</h1>
+				<p class="text-center mg-lg tc-white tight-width-whitespace" style="font-size: 1em;">
 					I&rsquo;m super excited that you want to work together.<br>Please fill in the form below or get in touch so I can learn about your project <br>and we can setup time to &nbsp;talk websites and Atlanta city love.
 				</p>
 			</div>
