--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
 </div>
 <!-- bloc-5-cta END -->
 
+<!-- ScrollToTop Button -->
+<a href="#" class="bloc-button btn btn-d scrollToTop" style="color: white!important"><span class="fa fa-chevron-up"></span></a>
+<!-- ScrollToTop Button END-->
+
 <!-- Footer - bloc-8 -->
 <footer class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
