--- a/page2.html
+++ b/page2.html
@@ -120,6 +120,10 @@
 </div>
 <!-- bloc-7 END -->
 
+<!-- ScrollToTop Button -->
+<a href="#" class="bloc-button btn btn-d scrollToTop" style="color: white!important"><span class="fa fa-chevron-up"></span></a>
+<!-- ScrollToTop Button END-->
+
 
 <!-- Footer - bloc-8 -->
 <footer class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
