fixed open elements, removed cache-control

--- a/page2.html
+++ b/page2.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta http-equiv="Cache-Control" content="public">
-	<meta http-equiv="Cache-Control" content="max-age=3600">
     <meta charset="utf-8">
     <meta name="description" content="I'm Mike and your should hire me to build your website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -157,15 +155,16 @@
 
 					<div class="col-sm-12 ">
 						<h2 class="white" style="font-size: 1.3em;">Partners</h2>
-						<ul>
-							<li><a href="car.com" style="text-decoration: none; color: white!important;">car.com</a></li>
-							<li><a href="pizza.com" style="text-decoration: none; color: white!important;">pizza.com</a></li>
-							<li><a href="myroof.com" style="text-decoration: none; color: white!important;">myroof.com</a></li>
-							<li><a href="realestateseo.com" style="text-decoration: none; color: white!important;">realestateseo.com</a></li>
-						</ul>		
+							<ul>
+								<li><a href="car.com" style="text-decoration: none; color: white!important;">car.com</a></li>
+								<li><a href="pizza.com" style="text-decoration: none; color: white!important;">pizza.com</a></li>
+								<li><a href="myroof.com" style="text-decoration: none; color: white!important;">myroof.com</a></li>
+								<li><a href="realestateseo.com" style="text-decoration: none; color: white!important;">realestateseo.com</a></li>
+							</ul>		
 					</div>
 				</div>
 
+			</div>
 		</div>
 	</div>
 </footer>
