--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta http-equiv="Cache-Control" content="public">
-	<meta http-equiv="Cache-Control" content="max-age=3600">
     <meta charset="utf-8">
     <meta name="description" content="I'm Mike and your should hire me to build your website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -258,6 +256,7 @@
 					</div>
 				</div>
 
+			</div>
 		</div>
 	</div>
 </footer>
