--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="description" content="I'm Mike and your should hire me to build your website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, nofollow">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/png" href="favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-	<script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>	<script defer src="./js/bootstrap.js"></script>
-	<script defer src="./js/bootstrap.js"></script>
+	<script async src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>	<script defer src="./js/bootstrap.js"></script>
+	<script async src="./js/bootstrap.js"></script>
 	<script defer src="./js/blocs.js"></script>
 	<script defer src="./js/gmaps.js"></script>
 
@@ -34,7 +34,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt="GoMike Designs logo" height="40" width="215" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/logo.webp" alt="GoMike Designs logo" height="40" width="215" /></a>
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -61,7 +61,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/mike.jpg" class="center-block image-resize-mode" width="100" height="103" alt="Mike's profile icon" />
+				<img src="img/mike.webp" class="center-block image-resize-mode" width="100" height="103" alt="Mike's profile icon" />
 				<p style="font-size: 3em;" class="text-center hero-bloc-text tc-white ">
 					I'm Mike.
 				</p>
@@ -128,7 +128,7 @@
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<div class="bloc tc-white bgc-atomic-tangerine b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do">
+<div class="bloc tc-white bgc-atomic-tangerine b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do" loading="lazy">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
@@ -154,7 +154,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/dogsitters.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/dogsitters.jpg" class="img-responsive portfolio-thumb" width="270" height="270" alt="Dog posing for picture with its walker holding the leash in the background."/></a>
+				<a href="#" data-lightbox="img/dogsitters.webp" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/dogsitters.webp" class="img-responsive portfolio-thumb" loading="lazy" width="270" height="270" alt="Dog posing for picture with its walker holding the leash in the background."/></a>
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
@@ -163,7 +163,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/cupcakes.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/cupcakes.jpg" class="img-responsive portfolio-thumb" width="270" height="270" alt="Three and a half yellow cupcakes with seafoam green icing and colored sprinkles."/></a>
+				<a href="#" data-lightbox="img/cupcakes.webp" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/cupcakes.webp" class="img-responsive portfolio-thumb" loading="lazy" width="270" height="270" alt="Three and a half yellow cupcakes with seafoam green icing and colored sprinkles."/></a>
 				<h3 class="mg-md text-center">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
@@ -174,7 +174,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/techgear.jpg" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/techgear.jpg" class="img-responsive portfolio-thumb" width="270" height="270" alt="Top view od photo and computer equipment neatly arranged on a dark colored surface." /></a>
+				<a href="#" data-lightbox="img/techgear.webp" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/techgear.webp" class="img-responsive portfolio-thumb" loading="lazy" width="270" height="270" alt="Top view od photo and computer equipment neatly arranged on a dark colored surface." /></a>
 				<h3 class="mg-md text-center">
 					New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
 				</h3>
@@ -183,7 +183,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/legal.jpg" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/legal.jpg" class="img-responsive portfolio-thumb" width="270" height="270" alt="Young businessman sitting in a hellicopter"/></a>
+				<a href="#" data-lightbox="img/legal.webp" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/legal.webp" class="img-responsive portfolio-thumb" loading="lazy" width="270" height="270" alt="Young businessman sitting in a hellicopter"/></a>
 				<h3 class="mg-md text-center">
 					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
 				</h3>
