--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<div class="bloc tc-white bgc-atomic-tangerine b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do" loading="lazy">
+<div class="bloc tc-white bgc-atomic-tangerine b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
